Added IO >> bug example